--- a/02-napdown.Rmd
+++ b/02-napdown.Rmd
@@ -2,7 +2,7 @@
 ## Setting up an eNAP  
 We will use the package `bookdown` to generate NAP document in a book format. Journal articles or reports can be produced in the same way. 
 We will also use the package `tinytex` to build pdf format of the book document.   
-1. First, launch the rstudio app in your pc.
+1. First, launch the rstudio app in your pc.  
 2. Install the bookdown and tinytex packages in case you have not installed them. Use any of the methods shown in the [Installing packages] section.  
 3. Then from the menu bar go to `File->>New Project->>New Directory->>Book Project using bookdown`.   
 A new window appears  
@@ -14,12 +14,19 @@ A new window appears
 6. After you select the directory location, you are returned to the 'Create Book project...' window. Click 'create project'.     
 A new project session opens up, with skeleton chapters and other sections and metadata files.  
 ![The window looks like this](tutorial_screenshots/bkdn_proj_window_label.png)   
-Your project window might appear with panel arrangements different from mine/in screenshot. Your project files can be accessed from the Files tab in bottom right of the project window.  
+Your project window might appear with panel arrangements different from mine/in screenshot.   
+Your project files can be accessed from the Files tab in bottom right of the project window.    
+
+![files](tutorial_screenshots/files_panel.png)
+
+
 Each chapter is compiled from a single .rmd file, and always starts with a first level header sign '#'.    
 From the files pane, you can open any chapter, and edit it to your liking.  
+
 Lets take a look at the '_bookdown.yml' file.  
+
 7. From the 'Files' tab, click on the _bookdown.yml' file.  
-The file open up in your script/source pane. Notice, the book_filename takes the name of the folder we created when opening the project.  
+The file opens up in your script/source pane. Notice, the book_filename takes the name of the folder we created when opening the project.  
 8. Let's add the line    `output_dir: "docs"`   to this file. 
 See screenshot below;  
 
@@ -39,6 +46,7 @@ Ignore everything else for now :)
 16. Add a chapter named 'Preliminaries' before the code chunk.   
 Chapters are created using the first level header #.   
 17. Add sections to your chapter using second level header ##.  
+
 Your script should look more or less similar to this;    
 
 ![edit book title and author](tutorial_screenshots/edit_index.png)   
@@ -89,12 +97,24 @@ To integrate a code (+ its evaluation), open a code chunk at your desired sectio
 For instance in the code below we use one of the in-built R datasets named `mtcars` to plot a bar chart of Car 'Model' against 'mpg' (miles per gallon).
 When this code is evaluated, the bar chart will be plotted within your document as specified. You may enter text before or after the plot. 
 
-```{r, fig.dim=c(30,20)}
+```{r}
+library(plotly)
 plotly::plot_ly(mtcars,type = 'bar', 
-                y=row.names(mtcars), x=~mpg)%>%
-  plotly::layout(yaxis=list(tickfont=list(size=26)),
-                 xaxis=list(tickfont=list(size=26)))
+                x=row.names(mtcars), y=~mpg)%>%
+  plotly::layout(yaxis=list(tickfont=list(size=10)),
+                 xaxis=list(tickfont=list(size=10)))
 ```
+
+Below is another example using precipitation data from worldclim  
+
+```{r}
+library(raster) # library responsible for plotting the data
+
+pr<-getData("worldclim", var='prec', res=5) # reading/accessing the data
+
+plot(pr$prec1) # plot the first layer of the data (precipitation for the month of January)
+```
+
 
 ### Some things to note
 1. To create additional chapters, create a new /empty .rmd file and save it under your bookdown directory. Use the same numbering structure as the default chapters (i.e. 01,02,03, etc).    
