--- a/05-Climatedata.Rmd
+++ b/05-Climatedata.Rmd
@@ -1,6 +1,12 @@
 # Working Climate data
 
-The first step is to set your working directory, where your files are stored. You can do this from the toolbar tab session, and choose 'Set Working Directory' from the drop down menu, and navigate to your folder. Or use the command `setwd(enter your path here)`
+The first step is to set your working directory, where your files are stored. You can do this from the toolbar tab session, and choose 'Set Working Directory' from the drop down menu, and navigate to your folder. 
+
+![setwd](tutorial_screenshots/setwd.png)
+
+
+Or use the command `setwd(enter your path here)`
+
 
 ## Historical climate data
 
@@ -27,19 +33,19 @@ library(lubridate)
 (cru_ts4.05.1901.2020.pre.dat.nc.gz/ru_ts4.05.1901.2020.tmp.dat.nc.gz). 
 4. Right click on it and copy link address. Open a code chunk and paste your link in an object( as in 'myurl' in below code).
 5. Call the function `download.file` and enter details as below.
-6. The files are stored as a compressed .gz file; to extract the files, call the function `gunzip` and enter file name with the .gz extension
+6. The files are stored as a compressed .gz file, to extract the files, call the function `gunzip` and enter file name with the .gz extension
 7. Run code
 
 
 ```{r, cache=TRUE, warning=FALSE, message=FALSE}
 
-# pre
+# precipitation
 #preurl<- "https://crudata.uea.ac.uk/cru/data/hrg/cru_ts_4.05/
 #cruts.2103051243.v4.05/pre/cru_ts4.05.1901.2020.pre.dat.nc.gz"
 #download.file(preurl, destfile="cru_ts4.05.1901.2020.pre.dat.nc.gz")
 #gunzip("cru_ts4.05.1901.2020.pre.dat.nc.gz")
 
-# tmp
+# temperature
 #tmpurl<- "https://crudata.uea.ac.uk/cru/data/hrg/cru_ts_4.05/
 #cruts.2103051243.v4.05/tmp/cru_ts4.05.1901.2020.tmp.dat.nc.gz"
 #download.file(tmpurl, destfile="cru_ts4.05.1901.2020.tmp.dat.nc.gz")
@@ -57,12 +63,12 @@ malawi<-rnaturalearth::ne_countries(country ='malawi')
 ### Load/Import your data into r
 Create new object name and call the raster function `stack`
 Enter the path to your data directory/ where you saved the downloaded file.
-To extract data exactly to your polygon shape, use the raster functions `crop` and `mask` and the bounding geometry (in our case the Malawi national boundary)
+To extract data exactly to your desired area on interest, use the raster functions `crop` and `mask` and the bounding geometry (in our case the Malawi national boundary)
 
 ```{r}
 
-prstack<-stack("C:\\Users\\Esther Makabe\\NAPdown\\cru_ts4.05.1901.2020.pre.dat.nc")
-temp<-stack("C:\\Users\\Esther Makabe\\NAPdown\\cru_ts4.05.1901.2020.tmp.dat.nc")
+prstack<-stack("C:\\Users\\Makabe\\NAPdown\\cru_ts4.05.1901.2020.pre.dat.nc")
+temp<-stack("C:\\Users\\Makabe\\NAPdown\\cru_ts4.05.1901.2020.tmp.dat.nc")
 
 pr_crop<-raster::crop(prstack, malawi) # cut out data for malawi
 pr_mask<-raster::mask(pr_crop,malawi) # mask data to malawi boundary
@@ -87,7 +93,7 @@ The `melt` function converts the data from a wide to long table format.
 The date values in our data are stored as and within text and the step below is to extract the dates from this text and store them in a new column.     
 We also, create two more columns to separate Year and Month  
 
-__Caution!: The process in this code chunk involves modifying the data and data structure and thus extra attention is required. If you need to run the code or part of it more than once, it is strongly recommended to run the whole code chunk rather than in parts.This is to avoid duplication and conflict in executing commands.__ 
+__Caution!: The process in this code chunk involves modifying the data structure and thus extra attention is required. If you need to run the code or part of it more than once, it is strongly recommended to run the whole code chunk rather than in parts.This is to avoid duplication and conflict in executing commands.__ 
 
 ```{r, warning=FALSE, message=FALSE}
 
@@ -175,7 +181,7 @@ or the annual means as below;
 + Plot time series object
 
 
-```{r, fig.dim=c(4,1), warning=FALSE, message=FALSE}
+```{r, warning=FALSE, message=FALSE}
 
 pr_ann<-prdf%>%dplyr::filter(Year>=1981)%>% group_by(Year)%>%
   summarise(across(contains("pr"), ~mean(pr))) 
@@ -193,8 +199,9 @@ ty<-list(overlaying = "y",
   side = "right",
   title = "Temperature (°C)",
   autotick = FALSE,
-      dtick = 10,
- range=c(0,30)
+      dtick = 1,
+  showgrid=F,
+ range=c(20,25)
   )
 
 # plot 
@@ -203,28 +210,27 @@ plot_ly(type= 'bar', data= pr.tmp, x= ~Year, y= ~pr, name = 'Precipitation')%>%
            yaxis='y2')%>%
     layout(legend=list(orientation='h', y=-0.13,x=0.7), 
                    yaxis=list(title='Precipitation (mm)',
-                              showticklables=F, tickfont=list(size=16)),width=700, 
+                              showticklables=F, tickfont=list(size=14)),width=700, 
            height=450, title='Malawi \n (Mean 1981-2020)', 
-                   yaxis2=ty, xaxis=list(tickangle=270,tickfont=list(size=16)))
-
+                   yaxis2=ty, xaxis=list(tickangle=270,tickfont=list(size=14)))
 
 
 ```
 
 
 
-The two preceeding plots are twin-plots, meaning two graphics have been combined in a single plot area. 
-To plot just one you may be choose one of the dataframes say temperature and plot it on its own. See below
+The two preceding plots are twin-plots, meaning two graphics have been combined in a single plot area. 
+To plot just one you may be choose one of the data frames, say temperature, and plot it on its own. See below
 
 
-```{r,warning=FALSE, message=FALSE, fig.width=30, fig.height=15}
+```{r,warning=FALSE, message=FALSE}
 
 temp_ann%>%filter(Year>2000)%>% plotly::plot_ly()%>%
  add_lines(x= ~Year, y= ~tmean, color='red', showlegend=FALSE)%>%
   add_markers(x= ~Year, y= ~tmean, color='red', showlegend=FALSE, 
               name='Temperature')%>%
-  layout(yaxis=list(title='Mean Temerature (°C)',tickfont=list(size=22)),
-         xaxis=list(tickangle=270,tickfont=list(size=22)))
+  layout(yaxis=list(title='Mean Temerature (°C)',tickfont=list(size=16)),
+         xaxis=list(tickangle=270,tickfont=list(size=16)))
 
 ```
 
