--- a/04-Exceldata.Rmd
+++ b/04-Exceldata.Rmd
@@ -142,17 +142,16 @@ then summarise the data by country using the functions 'group-by' and 'sum'
 5. Call the function 'ggplot' and enter parameters as shown in screenshot above
 6. Run code 
 
-```{r}
+```{r, fig.ext='jpeg'}
 
-tm<-ggplot(gcf, aes(fill=countryname, 
-       area=gcf$`Total GCF Funding`, 
+ggplot(gcf, aes(fill=countryname, 
+       area=`Total GCF Funding`, 
        label = paste(countryname,"\n",prettyNum(`Total GCF Funding`,
                                                 big.mark = ","))))+
   geom_treemap()+
   geom_treemap_text(colour='black', place='centre')+
   labs(subtitle = 'GCF Funding in Latin America & Caribbean')+
   theme(legend.position = 'none')
-show(tm)
 
 ```
 
