--- a/05-Climatedata.Rmd
+++ b/05-Climatedata.Rmd
@@ -80,12 +80,11 @@ tmask<-raster::mask(tcrop, malawi)
 
 At this point you can already plot individual precipitation and temperature layers using the basic plot function. Below we plot precipitation and temperature  for October 2011
 
-```{r, message=FALSE, warning=FALSE}
+```{r, message=FALSE, warning=FALSE, fig.ext='png'}
 par(mfrow=c(1,2))
-pr<-plot(prstack$X2011.10.16, main='Precipitation')
-t<-plot(temp$X2011.10.16, main='Temperature')
-show(pr)
-show(t)
+plot(prstack$X2011.10.16, main='Precipitation')
+plot(temp$X2011.10.16, main='Temperature')
+
 ```
 
 
