--- a/05-Climatedata.Rmd
+++ b/05-Climatedata.Rmd
@@ -80,7 +80,7 @@ tmask<-raster::mask(tcrop, malawi)
 
 At this point you can already plot individual precipitation and temperature layers using the basic plot function. Below we plot precipitation and temperature  for October 2011
 
-```{r, message=FALSE, warning=FALSE, fig.ext='png', fig.show='hold'}
+```{r pr-temp-plots, message=FALSE, warning=FALSE, fig.ext='PNG', fig.show='hold'}
 par(mfrow=c(1,2))
 plot(prstack$X2011.10.16, main='Precipitation')
 plot(temp$X2011.10.16, main='Temperature')
